Fixed the bug where the text would size too small on small devices

--- a/src/style.css
+++ b/src/style.css
@@ -31,10 +31,8 @@
     display: block;
 }
 
-.climbing {
-    href: "";
-}
-
-.display-3 {
-    font-size: 5vw;
+@media only screen and (max-width: 720px) {
+    .display-3 {
+        font-size: 10vw;
+    }
 }
